Fix horizontal scorlling on mobile

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ header .header-container {
     align-items: center;
     max-width: 1280px;
     margin: 0 auto;
-    width: 100%;
     padding: 4px 8px;
 }
 
